# project-chameleon

./: .gitignore  CMakeLists.txt  EXPECTED_OUTPUTS.md  Makefile  QUICK_TEST_GUIDE.md  README.md  SEGMENT_TREE_FIX.md  TESTING_README.md  chameleon_dsa.cpp  huffman_encoded_data.txt  vcpkg.json  verify_tests.ps1
Data Scraper/: attacker_session.sqlite3  chameleon_profile_scraper.py  offloader.py  stories_scraper.py  supabase.env  webhook.py  whatsapp_probe.py
Final Data Processor and Visualisation/: CMakeLists.txt  LATEST_UPDATES.md  QUICKSTART.md  build.bat  run_tests.ps1  supabase_data.txt  test_runner.bat  test_runner.ps1
Final Data Processor and Visualisation/chameleon-dashboard/: README.md
Final Data Processor and Visualisation/include/: cli_interface.h  inverted_index.h  json_parser.h  levenshtein.h  supabase_client.h  trie.h
Final Data Processor and Visualisation/src/: bloom_filter.cpp  inverted_index.cpp  json_parser.cpp  main.cpp.bak  mainfinal.cpp  minhash.cpp  supabase_analyzer.cpp  trie.cpp
Final Data Processor and Visualisation/test_inputs/: README.md  test_set3.txt
Malware/: README.md
Video Game Spyware/: UpgradeLog.htm
chameleon-dashboard/: README.md  index.html  script.js  style.css
include/: bloom_filter.h  minhash.h  segment_tree.h  supabase_analyzer.h  supabase_client.h  supabase_models.h  union_find.h
instagramclone-main/: package-lock.json
output/: huffman_encoded_data.txt
src/: cli_interface.cpp  levenshtein.cpp  main.cpp  segment_tree.cpp  supabase_client.cpp  union_find.cpp
test_inputs/: test_set1.txt  test_set2.txt  (+1 more)
(+67 files in other folders)
